syntax = "proto3";

package hero.v1alpha;

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

service UserService {
  rpc Get (UserServiceGetRequest) returns (UserServiceGetResponse);
  rpc Add (UserServiceAddRequest) returns (UserServiceAddResponse);
  rpc Update (UserServiceUpdateRequest) returns (UserServiceUpdateResponse);
  rpc Delete (UserServiceDeleteRequest) returns (UserServiceDeleteResponse);
  rpc Login (UserServiceLoginRequest) returns (UserServiceLoginResponse);
}

message UserServiceGetRequest {
  string id = 1;
}

message UserServiceGetResponse {
  repeated User user = 1;
}

message UserServiceAddRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message UserServiceAddResponse {
  User user = 1;
}

message UserServiceUpdateRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message UserServiceUpdateResponse {
  User user = 1;
}

message UserServiceDeleteRequest {
  string id = 1;
}

message UserServiceDeleteResponse {
  User user = 1;
}

message UserServiceLoginRequest {
  string email = 1;
  string password = 2;
}

message UserServiceLoginResponse {
  string token = 1;
}
